--- a/example.ini
+++ b/example.ini
@@ -1,8 +1,12 @@
 [PATH]
+METADATA_PATH = /clusterdata/uqxtan9/Xiao/STimage/dataset/breast_cancer_oldST_STNet/dataset.csv
 DATA_PATH = /clusterdata/uqxtan9/Xiao/STimage/dataset/breast_cancer_oldST_STNet
+TILING_PATH = /clusterdata/uqxtan9/Xiao/STimage/dataset/breast_cancer_oldST_STNet/tiles
 OUT_PATH = /clusterdata/uqxtan9/Xiao/STimage/development/Wiener/test_results
 
 [DATASET]
+normalization = log
+ensembl_to_id = True
 gene_selection  = tumour
 training_ratio = 0.7
 valid_ratio = 0.2
@@ -11,7 +15,10 @@ valid_ratio = 0.2
 batch_size = 64
 early_stop = True
 epochs = 10
-model_name = NB
+model_name = NB_regression
+
 [RESULTS]
 save_train_history = True
 save_model_weights = True
+correlation_plot = True
+spatial_expression_plot = True
