fix ST data platform

--- a/example.ini
+++ b/example.ini
@@ -5,6 +5,8 @@ TILING_PATH = /clusterdata/uqxtan9/Xiao/STimage/dataset/breast_cancer_oldST_STNe
 OUT_PATH = /clusterdata/uqxtan9/Xiao/STimage/development/Wiener/test_results
 
 [DATASET]
+# Visium or Legacy_ST
+platform = Visium
 normalization = log
 ensembl_to_id = True
 gene_selection  = tumour
