update stain normalization and tile filtering

--- a/example.ini
+++ b/example.ini
@@ -8,7 +8,8 @@ OUT_PATH = /clusterdata/uqxtan9/Xiao/STimage/development/Wiener/test_results
 # Visium or Legacy_ST
 platform = Visium
 normalization = log
-ensembl_to_id = True
+ensembl_to_id = False
+tile_size = 299
 gene_selection  = tumour
 training_ratio = 0.7
 valid_ratio = 0.2
