update example config file

--- a/example.ini
+++ b/example.ini
@@ -63,3 +63,11 @@ save_model_weights = True
 # option to save output plots
 correlation_plot = True
 spatial_expression_plot = True
+
+[EXTERNAL_DATASET]
+
+# path to external H&E image
+external_data_path = '/path/to/image.svs'
+
+# file format for the external H&E image. eg. SVS, CZI and GDAL(jpeg, tiff, png...)
+format = 'SVS'
