--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
-*.pyc
-.ipynb_checkpoints
-*/.ipynb_checkpoints/*
-*/__pycache__
+**/*.pyc
+**/.ipynb_checkpoints
+**/.ipynb_checkpoints/*
+**/__pycache__
 .DS_Store
-*/.DS_Store
+**/.DS_Store
 dataset
-dataset/*
+dataset/**
 .idea/
 development/Wiener
-
+development/**/
+development/*.pdf
+development/*.png
+development/*.jpg
+development/*.h5
+development/*.csv
+development/*.txt
+development/*.pkl
+**/*.tar.gz
+locks/**
