--- a/development/Xenium_classification/environment.yml
+++ b/development/Xenium_classification/environment.yml
@@ -1,152 +1,157 @@
-name: /home/uqjxie6/xenium
+name: hovernet
 channels:
   - pytorch
   - nvidia
   - conda-forge
+  - bioconda
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_kmp_llvm
-  - blas=1.0=mkl
-  - brotlipy=0.7.0=py39h27cfd23_1003
-  - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2023.05.30=h06a4308_0
-  - cairo=1.16.0=hbbf8b49_1016
-  - certifi=2023.7.22=py39h06a4308_0
-  - cffi=1.15.1=py39h5eee18b_3
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - conda-pack=0.6.0=pyhd3eb1b0_0
-  - cryptography=39.0.1=py39h9ce1e76_0
-  - cuda-cudart=11.8.89=0
-  - cuda-cupti=11.8.87=0
-  - cuda-libraries=11.8.0=0
-  - cuda-nvrtc=11.8.89=0
-  - cuda-nvtx=11.8.86=0
-  - cuda-runtime=11.8.0=0
-  - expat=2.5.0=hcb278e6_1
-  - ffmpeg=4.3=hf484d3e_0
-  - filelock=3.9.0=py39h06a4308_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.2=h14ed4e7_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - freetype=2.12.1=h4a9f257_0
-  - gdk-pixbuf=2.42.10=h05c8ddd_0
-  - gettext=0.21.1=h27087fc_0
-  - giflib=5.2.1=h5eee18b_3
-  - glib=2.76.3=hfc55251_0
-  - glib-tools=2.76.3=hfc55251_0
-  - gmp=6.2.1=h295c915_3
-  - gmpy2=2.1.2=py39heeb90bb_0
-  - gnutls=3.6.15=he1e5248_0
-  - icu=72.1=hcb278e6_0
-  - idna=3.4=py39h06a4308_0
-  - intel-openmp=2023.1.0=hdb19cb5_46305
-  - jinja2=3.1.2=py39h06a4308_0
-  - jpeg=9e=h5eee18b_1
-  - lame=3.100=h7b6447c_0
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - lerc=3.0=h295c915_0
-  - libblas=3.9.0=1_h86c2bf4_netlib
-  - libcublas=11.11.3.6=0
-  - libcufft=10.9.0.58=0
-  - libcufile=1.6.1.9=0
-  - libcurand=10.3.2.106=0
-  - libcusolver=11.4.1.48=0
-  - libcusparse=11.7.5.86=0
-  - libdeflate=1.17=h5eee18b_0
-  - libexpat=2.5.0=hcb278e6_1
-  - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=13.1.0=he5830b7_0
-  - libgfortran-ng=13.1.0=h69a702a_0
-  - libgfortran5=13.1.0=h15d22d2_0
-  - libglib=2.76.3=hebfc3b9_0
-  - libiconv=1.17=h166bdaf_0
-  - libidn2=2.3.4=h5eee18b_0
-  - liblapack=3.9.0=5_h92ddd45_netlib
-  - libnpp=11.8.0.86=0
-  - libnvjpeg=11.9.0.86=0
-  - libpng=1.6.39=h5eee18b_0
-  - libsqlite=3.42.0=h2797004_0
-  - libstdcxx-ng=13.1.0=hfd8a6a1_0
-  - libtasn1=4.19.0=h5eee18b_0
-  - libtiff=4.5.0=h6a678d5_2
-  - libunistring=0.9.10=h27cfd23_0
-  - libuuid=2.38.1=h0b41bf4_0
-  - libwebp=1.2.4=h11a3e52_1
-  - libwebp-base=1.2.4=h5eee18b_1
-  - libxcb=1.15=h0b41bf4_0
-  - libxml2=2.10.4=hfdac1af_0
-  - libzlib=1.2.13=hd590300_5
-  - llvm-openmp=16.0.5=h4dfa4b3_0
-  - lz4-c=1.9.4=h6a678d5_0
-  - markupsafe=2.1.1=py39h7f8727e_0
-  - mkl=2023.1.0=h6d00ec8_46342
-  - mkl-service=2.4.0=py39h5eee18b_1
-  - mkl_fft=1.3.6=py39h417a72b_1
-  - mkl_random=1.2.2=py39h417a72b_1
-  - mpc=1.1.0=h10f8cd9_1
-  - mpfr=4.0.2=hb69a4c5_1
-  - mpmath=1.2.1=py39h06a4308_0
-  - ncurses=6.4=h6a678d5_0
-  - nettle=3.7.3=hbbd107a_1
-  - networkx=2.8.4=py39h06a4308_1
-  - numpy-base=1.24.3=py39h060ed82_1
-  - openh264=2.1.1=h4ff587b_0
-  - openjdk=8.0.152=h7b6447c_3
-  - openjpeg=2.5.0=hfec8fc6_2
-  - openslide=3.4.1=h7773abc_6
-  - openssl=1.1.1v=h7f8727e_0
-  - pcre2=10.40=hc3806b6_0
-  - pillow=9.4.0=py39h6a678d5_0
-  - pip=23.0.1=py39h06a4308_0
-  - pixman=0.40.0=h36c2ea0_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pyopenssl=23.0.0=py39h06a4308_0
-  - pysocks=1.7.1=py39h06a4308_0
-  - python=3.9.16=h7a1cb2a_2
-  - pytorch=2.0.1=py3.9_cuda11.8_cudnn8.7.0_0
-  - pytorch-cuda=11.8=h7e8668a_5
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - blas=1.0
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - ca-certificates=2023.05.30
+  - cairo=1.16.0
+  - certifi=2023.7.22
+  - cffi=1.15.1
+  - charset-normalizer=2.0.4
+  - conda-pack=0.6.0
+  - cryptography=39.0.1
+  - cuda-cudart=11.8.89
+  - cuda-cupti=11.8.87
+  - cuda-libraries=11.8.0
+  - cuda-nvrtc=11.8.89
+  - cuda-nvtx=11.8.86
+  - cuda-runtime=11.8.0
+  - expat=2.5.0
+  - ffmpeg=4.3
+  - filelock=3.9.0
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - freetype=2.12.1
+  - gdal=1.9.2
+  - gdk-pixbuf=2.42.10
+  - gettext=0.21.1
+  - giflib=5.2.1
+  - glib=2.76.3
+  - glib-tools=2.76.3
+  - gmp=6.2.1
+  - gmpy2=2.1.2
+  - gnutls=3.6.15
+  - icu=72.1
+  - idna=3.4
+  - intel-openmp=2023.1.0
+  - jinja2=3.1.2
+  - jpeg=9e
+  - lame=3.100
+  - lcms2=2.12
+  - ld_impl_linux-64=2.38
+  - lerc=3.0
+  - libblas=3.9.0
+  - libcublas=11.11.3.6
+  - libcufft=10.9.0.58
+  - libcufile=1.6.1.9
+  - libcurand=10.3.2.106
+  - libcusolver=11.4.1.48
+  - libcusparse=11.7.5.86
+  - libdeflate=1.17
+  - libexpat=2.5.0
+  - libffi=3.4.4
+  - libgcc=7.2.0
+  - libgcc-ng=13.1.0
+  - libgfortran-ng=13.1.0
+  - libgfortran5=13.1.0
+  - libglib=2.76.3
+  - libhwloc=2.9.0
+  - libiconv=1.17
+  - libidn2=2.3.4
+  - liblapack=3.9.0
+  - libnpp=11.8.0.86
+  - libnsl=2.0.1
+  - libnvjpeg=11.9.0.86
+  - libpng=1.6.39
+  - libsqlite=3.42.0
+  - libstdcxx-ng=13.1.0
+  - libtasn1=4.19.0
+  - libtiff=4.5.0
+  - libunistring=0.9.10
+  - libuuid=2.38.1
+  - libwebp=1.2.4
+  - libwebp-base=1.2.4
+  - libxcb=1.15
+  - libxml2=2.10.4
+  - libzlib=1.2.13
+  - llvm-openmp=16.0.5
+  - lz4-c=1.9.4
+  - markupsafe=2.1.1
+  - mkl=2023.1.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.6
+  - mkl_random=1.2.2
+  - mpc=1.1.0
+  - mpfr=4.0.2
+  - mpmath=1.2.1
+  - ncurses=6.4.20240210
+  - nettle=3.7.3
+  - networkx=2.8.4
+  - openh264=2.1.1
+  - openjdk=8.0.152
+  - openjpeg=2.5.0
+  - openslide=3.4.1
+  - openssl=3.2.1
+  - pcre2=10.40
+  - pillow=9.4.0
+  - pip=23.0.1
+  - pixman=0.40.0
+  - pthread-stubs=0.4
+  - pycparser=2.21
+  - pyopenssl=23.0.0
+  - pysocks=1.7.1
+  - python=3.9.16
+  - python_abi=3.9=4_cp39
+  - pytorch=2.0.1
+  - pytorch-cuda=11.8
   - pytorch-mutex=1.0=cuda
-  - readline=8.2=h5eee18b_0
-  - requests=2.29.0=py39h06a4308_0
-  - setuptools=67.8.0=py39h06a4308_0
-  - sqlite=3.41.2=h5eee18b_0
-  - sympy=1.11.1=py39h06a4308_0
-  - tbb=2021.8.0=hdb19cb5_0
-  - tk=8.6.12=h1ccaba5_0
-  - torchaudio=2.0.2=py39_cu118
-  - torchtriton=2.0.0=py39
-  - torchvision=0.15.2=py39_cu118
-  - typing_extensions=4.5.0=py39h06a4308_0
-  - urllib3=1.26.15=py39h06a4308_0
-  - wheel=0.38.4=py39h06a4308_0
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.1.1=hd590300_0
-  - xorg-libsm=1.2.4=h7391055_0
-  - xorg-libx11=1.8.5=h8ee46fc_0
-  - xorg-libxau=1.0.11=hd590300_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h0b41bf4_1003
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.4.2=h5eee18b_0
-  - zlib=1.2.13=hd590300_5
-  - zstd=1.5.5=hc292b87_0
+  - readline=8.2
+  - requests=2.29.0
+  - setuptools=67.8.0
+  - sqlite=3.41.2
+  - sympy=1.11.1
+  - tbb=2021.8.0
+  - tk=8.6.12
+  - torchaudio=2.0.2
+  - torchtriton=2.0.0
+  - torchvision=0.15.2
+  - typing_extensions=4.5.0
+  - urllib3=1.26.15
+  - wheel=0.38.4
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.1.1
+  - xorg-libsm=1.2.4
+  - xorg-libx11=1.8.5
+  - xorg-libxau=1.0.11
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
+  - xz=5.4.2
+  - zlib=1.2.13
+  - zstd=1.5.5
   - pip:
       - absl-py==1.4.0
-      - aiobotocore==2.5.0
-      - aiohttp==3.8.4
+      - aiobotocore==2.5.4
+      - aiohttp==3.9.5
       - aioitertools==0.11.0
       - aiosignal==1.3.1
-      - alabaster==0.7.13
+      - alabaster==0.7.16
       - albumentations==1.3.1
       - anndata==0.9.1
       - anyio==3.7.0
@@ -165,8 +170,8 @@ dependencies:
       - beautifulsoup4==4.12.2
       - bleach==6.0.0
       - blessed==1.20.0
-      - boto3==1.26.152
-      - botocore==1.29.152
+      - boto3==1.28.17
+      - botocore==1.31.17
       - build==0.10.0
       - cached-property==1.5.2
       - cachey==0.2.1
@@ -204,7 +209,7 @@ dependencies:
       - fastapi==0.88.0
       - fasteners==0.18
       - fastjsonschema==2.17.1
-      - fiona==1.9.4.post1
+      - fiona==1.9.6
       - flax==0.6.11
       - fonttools==4.39.4
       - fqdn==1.5.1
@@ -212,7 +217,7 @@ dependencies:
       - frozenlist==1.3.3
       - fsspec==2023.5.0
       - future==0.18.3
-      - geopandas==0.13.0
+      - geopandas==0.14.3
       - greenlet==2.0.2
       - h11==0.14.0
       - h5py==3.8.0
@@ -298,9 +303,9 @@ dependencies:
       - numpyro==0.12.1
       - ome-zarr==0.7.1
       - omnipath==1.0.7
-      - opencv-contrib-python==4.7.0.72
-      - opencv-python==4.7.0.72
-      - opencv-python-headless==4.7.0.72
+      - opencv-contrib-python==4.9.0.80
+      - opencv-python==4.9.0.80
+      - opencv-python-headless==4.9.0.80
       - openslide-python==1.2.0
       - opt-einsum==3.3.0
       - optax==0.1.5
@@ -363,7 +368,7 @@ dependencies:
       - rfc3986-validator==0.1.1
       - rich==13.4.1
       - s3fs==2023.5.0
-      - s3transfer==0.6.1
+      - s3transfer==0.6.2
       - safetensors==0.3.1
       - scanpy==1.9.3
       - scikit-image==0.20.0
@@ -373,7 +378,7 @@ dependencies:
       - seaborn==0.12.2
       - send2trash==1.8.2
       - session-info==1.0.0
-      - shapely==2.0.1
+      - shapely==2.0.4
       - simpleitk==2.2.1
       - six==1.16.0
       - slicerator==1.1.0
@@ -396,7 +401,7 @@ dependencies:
       - sphinxcontrib-qthelp==1.0.3
       - sphinxcontrib-serializinghtml==1.1.5
       - sqlalchemy==2.0.15
-      - squidpy==1.2.3
+      - squidpy==1.2.2
       - stack-data==0.6.2
       - starlette==0.22.0
       - starsessions==1.3.0
@@ -436,13 +441,12 @@ dependencies:
       - websocket-client==1.5.2
       - websockets==11.0.3
       - wrapt==1.15.0
-      - xarray==2022.12.0
-      - xarray-dataclasses==1.5.0
-      - xarray-datatree==0.0.12
+      - xarray==2023.12.0
+      - xarray-dataclasses==1.7.0
+      - xarray-datatree==0.0.14
       - xarray-schema==0.0.3
-      - xarray-spatial==0.3.5
-      - yarl==1.9.2
-      - zarr==2.14.2
+      - xarray-spatial==0.3.7
+      - yarl==1.9.4
+      - zarr==2.17.1
       - zict==3.0.0
-      - zipp==3.15.0
-prefix: /home/uqjxie6/xenium
+      - zipp==3.18.1
