--- a/development/Xenium_classification/environment.yml
+++ b/development/Xenium_classification/environment.yml
@@ -54,6 +54,7 @@ dependencies:
   - ld_impl_linux-64=2.38
   - lerc=3.0
   - libblas=3.9.0
+  - libcblas=3.9.0
   - libcublas=11.11.3.6
   - libcufft=10.9.0.58
   - libcufile=1.6.1.9
@@ -128,7 +129,6 @@ dependencies:
   - torchaudio=2.0.2
   - torchtriton=2.0.0
   - torchvision=0.15.2
-  - typing_extensions=4.5.0
   - urllib3=1.26.15
   - wheel=0.38.4
   - xorg-kbproto=1.0.7
@@ -146,106 +146,112 @@ dependencies:
   - zlib=1.2.13
   - zstd=1.5.5
   - pip:
-      - absl-py==1.4.0
-      - aiobotocore==2.5.4
+      - absl-py==2.1.0
+      - aiobotocore==2.12.3
       - aiohttp==3.9.5
       - aioitertools==0.11.0
       - aiosignal==1.3.1
       - alabaster==0.7.16
       - albumentations==1.3.1
-      - anndata==0.9.1
-      - anyio==3.7.0
-      - app-model==0.1.4
+      - anndata==0.10.5.post1
+      - annotated-types==0.6.0
+      - anyio==4.3.0
+      - app-model==0.2.6
       - appdirs==1.4.4
-      - argon2-cffi==21.3.0
+      - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
-      - arrow==1.2.3
+      - array-api-compat==1.6
+      - arrow==1.3.0
       - asciitree==0.3.3
-      - asttokens==2.2.1
-      - async-lru==2.0.2
-      - async-timeout==4.0.2
-      - attrs==23.1.0
-      - babel==2.12.1
+      - asttokens==2.4.1
+      - async-lru==2.0.4
+      - async-timeout==4.0.3
+      - attrs==23.2.0
+      - babel==2.14.0
       - backcall==0.2.0
-      - beautifulsoup4==4.12.2
-      - bleach==6.0.0
+      - beautifulsoup4==4.12.3
+      - bleach==6.1.0
       - blessed==1.20.0
-      - boto3==1.28.17
-      - botocore==1.31.17
-      - build==0.10.0
+      - boto3==1.34.69
+      - botocore==1.34.69
+      - build==1.2.1
       - cached-property==1.5.2
       - cachey==0.2.1
       - cell2location==0.1.3
       - chex==0.1.7
-      - click==8.1.3
+      - click==8.1.7
       - click-plugins==1.1.1
       - cligj==0.7.2
-      - cloudpickle==2.2.1
-      - colorcet==3.0.1
-      - comm==0.1.3
+      - cloudpickle==3.0.0
+      - colorcet==3.1.0
+      - comm==0.2.2
       - contextlib2==21.6.0
-      - contourpy==1.0.7
-      - croniter==1.3.15
-      - cycler==0.11.0
-      - cython==0.29.35
-      - dask==2023.5.1
-      - dask-image==2023.3.0
-      - datashader==0.15.0
+      - contourpy==1.2.1
+      - croniter==2.0.5
+      - cycler==0.12.1
+      - cython==3.0.10
+      - dask==2024.4.2
+      - dask-expr==1.0.12
+      - dask-image==2023.8.1
+      - datashader==0.16.1
       - datashape==0.5.2
       - dateutils==0.6.12
-      - debugpy==1.6.7
+      - debugpy==1.8.1
       - decorator==5.1.1
-      - deepdiff==6.3.0
+      - deepdiff==7.0.1
       - defusedxml==0.7.1
-      - distributed==2023.5.1
+      - distributed==2024.4.2
       - dm-tree==0.1.8
       - docrep==0.3.2
-      - docstring-parser==0.15
-      - docutils==0.17.1
+      - docstring-parser==0.16
+      - docutils==0.20.1
+      - editor==1.6.6
       - entrypoints==0.4
-      - etils==1.3.0
-      - exceptiongroup==1.1.1
-      - executing==1.2.0
-      - fastapi==0.88.0
-      - fasteners==0.18
-      - fastjsonschema==2.17.1
+      - etils==1.5.2
+      - exceptiongroup==1.2.1
+      - executing==2.0.1
+      - fastapi==0.110.2
+      - fasteners==0.19
+      - fastjsonschema==2.19.1
+      - fcsparser==0.2.8
       - fiona==1.9.6
-      - flax==0.6.11
-      - fonttools==4.39.4
+      - flax==0.7.4
+      - fonttools==4.51.0
       - fqdn==1.5.1
       - freetype-py==2.4.0
-      - frozenlist==1.3.3
-      - fsspec==2023.5.0
-      - future==0.18.3
+      - frozenlist==1.4.1
+      - fsspec==2023.6.0
+      - future==1.0.0
       - geopandas==0.14.3
-      - greenlet==2.0.2
+      - greenlet==3.0.3
       - h11==0.14.0
-      - h5py==3.8.0
+      - h5py==3.11.0
       - heapdict==1.0.1
-      - hsluv==5.0.3
-      - huggingface-hub==0.15.1
-      - igraph==0.10.4
-      - imagecodecs==2023.3.16
-      - imageio==2.30.0
+      - hsluv==5.0.4
+      - huggingface-hub==0.22.2
+      - igraph==0.11.4
+      - imagecodecs==2024.1.1
+      - imageio==2.34.1
       - imagesize==1.4.1
-      - importlib-metadata==6.6.0
-      - importlib-resources==5.12.0
-      - in-n-out==0.1.7
-      - inflect==6.0.4
-      - inquirer==3.1.3
-      - ipykernel==6.23.1
-      - ipython==8.13.2
+      - importlib-metadata==7.1.0
+      - importlib-resources==6.4.0
+      - in-n-out==0.2.0
+      - inflect==7.2.0
+      - inquirer==3.2.4
+      - ipykernel==6.29.4
+      - ipython==8.18.1
       - ipython-genutils==0.2.0
       - isoduration==20.11.0
-      - itsdangerous==2.1.2
+      - itsdangerous==2.2.0
       - jax==0.4.13
       - jaxlib==0.4.13
-      - jedi==0.18.2
+      - jedi==0.19.1
       - jmespath==1.0.1
-      - joblib==1.2.0
-      - json5==0.9.14
-      - jsonpointer==2.3
-      - jsonschema==4.17.3
+      - joblib==1.4.0
+      - json5==0.9.25
+      - jsonpointer==2.4
+      - jsonschema==4.21.1
+      - jsonschema-specifications==2023.12.1
       - jupyter-cache==0.6.1
       - jupyter-client==8.2.0
       - jupyter-core==5.3.0
@@ -256,197 +262,215 @@ dependencies:
       - jupyterlab==4.0.1
       - jupyterlab-pygments==0.2.2
       - jupyterlab-server==2.22.1
-      - kiwisolver==1.4.4
-      - lazy-loader==0.2
-      - leidenalg==0.9.1
-      - lightning==2.0.2
-      - lightning-cloud==0.5.36
-      - lightning-utilities==0.8.0
-      - llvmlite==0.40.1
+      - kiwisolver==1.4.5
+      - lamin-utils==0.13.2
+      - lazy-loader==0.4
+      - leidenalg==0.10.2
+      - lightning==2.1.4
+      - lightning-cloud==0.5.66
+      - lightning-utilities==0.11.2
+      - llvmlite==0.41.1
       - locket==1.0.0
-      - loguru==0.7.0
-      - magicgui==0.7.2
-      - markdown-it-py==2.2.0
-      - matplotlib==3.7.1
-      - matplotlib-inline==0.1.6
+      - loguru==0.7.2
+      - magicgui==0.8.2
+      - markdown-it-py==3.0.0
+      - matplotlib==3.8.4
+      - matplotlib-inline==0.1.7
       - matplotlib-scalebar==0.8.1
-      - mdit-py-plugins==0.3.5
+      - mdit-py-plugins==0.4.0
       - mdurl==0.1.2
-      - mistune==2.0.5
+      - mistune==3.0.2
       - ml-collections==0.1.1
-      - ml-dtypes==0.2.0
-      - msgpack==1.0.5
+      - ml-dtypes==0.4.0
+      - more-itertools==10.2.0
+      - msgpack==1.0.8
       - mudata==0.2.3
-      - multidict==6.0.4
-      - multipledispatch==0.6.0
+      - multidict==6.0.5
+      - multipledispatch==1.0.0
       - multiscale-spatial-image==0.11.2
       - mypy-extensions==1.0.0
-      - myst-nb==0.17.2
-      - myst-parser==0.18.1
-      - napari==0.4.17
-      - napari-console==0.0.8
-      - napari-matplotlib==0.2.1
+      - myst-nb==1.1.0
+      - myst-parser==2.0.0
+      - napari==0.4.19.post1
+      - napari-console==0.0.9
+      - napari-matplotlib==2.0.1
       - napari-plugin-engine==0.2.0
-      - napari-spatialdata==0.2.4
-      - napari-svg==0.1.7
-      - natsort==8.3.1
+      - napari-spatialdata==0.4.1
+      - napari-svg==0.1.10
+      - natsort==8.4.0
       - nbclient==0.7.4
-      - nbconvert==7.4.0
-      - nbformat==5.9.0
-      - nest-asyncio==1.5.6
-      - notebook-shim==0.2.3
-      - npe2==0.7.0
+      - nbconvert==7.16.3
+      - nbformat==5.10.4
+      - nest-asyncio==1.6.0
+      - notebook-shim==0.2.4
+      - npe2==0.7.5
       - numba==0.57.1
-      - numcodecs==0.11.0
-      - numpy==1.22.4
-      - numpydoc==1.5.0
+      - numcodecs==0.12.1
+      - numpy==1.21.6
+      - numpydoc==1.7.0
       - numpyro==0.12.1
-      - ome-zarr==0.7.1
-      - omnipath==1.0.7
+      - ome-zarr==0.8.3
+      - omnipath==1.0.8
       - opencv-contrib-python==4.9.0.80
       - opencv-python==4.9.0.80
       - opencv-python-headless==4.9.0.80
-      - openslide-python==1.2.0
+      - openslide-python==1.3.1
       - opt-einsum==3.3.0
-      - optax==0.1.5
-      - orbax-checkpoint==0.2.6
+      - optax==0.2.1
+      - orbax-checkpoint==0.5.9
       - ordered-set==4.1.0
-      - overrides==7.3.1
-      - packaging==23.1
-      - pandas==2.0.2
-      - pandocfilters==1.5.0
-      - param==1.13.0
-      - parso==0.8.3
-      - partd==1.4.0
+      - overrides==7.7.0
+      - packaging==24.0
+      - pandas==2.0.3
+      - pandocfilters==1.5.1
+      - param==2.1.0
+      - parso==0.8.4
+      - partd==1.4.1
       - pathml==2.1.1
-      - patsy==0.5.3
-      - pexpect==4.8.0
+      - patsy==0.5.6
+      - pexpect==4.9.0
       - pickleshare==0.7.5
       - pims==0.6.1
-      - pint==0.22
-      - platformdirs==3.5.1
-      - prometheus-client==0.17.0
-      - prompt-toolkit==3.0.38
-      - psutil==5.9.5
-      - psygnal==0.9.1
+      - pint==0.23
+      - platformdirs==4.2.0
+      - pooch==1.8.1
+      - prometheus-client==0.20.0
+      - prompt-toolkit==3.0.43
+      - protobuf==5.26.1
+      - psutil==5.9.8
+      - psygnal==0.11.0
       - ptyprocess==0.7.0
       - pure-eval==0.2.2
-      - pyarrow==12.0.0
+      - pyarrow==16.0.0
+      - pyconify==0.1.6
       - pyct==0.5.0
-      - pydantic==1.10.8
-      - pydicom==2.3.1
+      - pydantic==2.7.0
+      - pydantic-compat==0.1.2
+      - pydantic-core==2.18.1
+      - pydicom==2.4.4
       - pygeos==0.14
-      - pygments==2.15.1
-      - pyjwt==2.7.0
-      - pynndescent==0.5.10
+      - pygments==2.17.2
+      - pyjwt==2.8.0
+      - pynndescent==0.5.12
       - pyopengl==3.1.7
-      - pyparsing==3.0.9
-      - pyproj==3.5.0
+      - pyparsing==3.1.2
+      - pyproj==3.6.1
       - pyproject-hooks==1.0.0
       - pyro-api==0.1.2
-      - pyro-ppl==1.8.5
-      - pyrsistent==0.19.3
+      - pyro-ppl==1.9.0
+      - pyrsistent==0.20.0
       - python-bioformats==4.0.7
-      - python-dateutil==2.8.2
+      - python-dateutil==2.9.0.post0
       - python-editor==1.0.4
-      - python-igraph==0.10.4
+      - python-igraph==0.11.4
       - python-javabridge==4.0.3
       - python-json-logger==2.0.7
-      - python-multipart==0.0.6
+      - python-multipart==0.0.9
       - pytomlpp==1.0.13
-      - pytorch-lightning==2.0.2
-      - pytz==2023.3
+      - pytorch-lightning==2.2.2
+      - pytz==2024.1
       - pywavelets==1.4.1
-      - pyyaml==6.0
-      - pyzmq==25.1.0
-      - qtconsole==5.4.3
-      - qtpy==2.3.1
+      - pyyaml==6.0.1
+      - pyzmq==26.0.2
+      - qtconsole==5.5.1
+      - qtpy==2.4.1
       - qudida==0.0.4
-      - readchar==4.0.5
-      - regex==2023.6.3
+      - readchar==4.0.6
+      - readfcs==1.1.8
+      - referencing==0.34.0
+      - regex==2024.4.16
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
-      - rich==13.4.1
-      - s3fs==2023.5.0
-      - s3transfer==0.6.2
-      - safetensors==0.3.1
+      - rich==13.7.1
+      - rpds-py==0.18.0
+      - runs==1.2.2
+      - s3fs==0.6.0
+      - s3transfer==0.10.1
+      - safetensors==0.4.3
       - scanpy==1.9.3
-      - scikit-image==0.20.0
-      - scikit-learn==1.2.2
-      - scipy==1.9.1
-      - scvi-tools==1.0.0
-      - seaborn==0.12.2
-      - send2trash==1.8.2
+      - scikit-image==0.21.0
+      - scikit-learn==1.4.2
+      - scipy==1.11.4
+      - scvi-tools==1.1.2
+      - seaborn==0.13.2
+      - send2trash==1.8.3
       - session-info==1.0.0
       - shapely==2.0.4
-      - simpleitk==2.2.1
+      - shellingham==1.5.4
+      - simpleitk==2.3.1
       - six==1.16.0
       - slicerator==1.1.0
-      - sniffio==1.3.0
+      - sniffio==1.3.1
       - snowballstemmer==2.2.0
       - sortedcontainers==2.4.0
-      - soupsieve==2.4.1
-      - spams==2.6.2.5
-      - sparse==0.14.0
+      - soupsieve==2.5
+      - spams==2.6.5.4
+      - sparse==0.15.1
       - spatial-image==0.3.0
-      - spatialdata==0.0.9
-      - spatialdata-io==0.0.4
-      - spatialdata-plot==0.0.2
-      - sphinx==4.5.0
+      - spatialdata==0.0.15
+      - spatialdata-io==0.1.2
+      - spatialdata-plot==0.2.1
+      - sphinx==7.3.7
       - sphinx-copybutton==0.5.2
-      - sphinxcontrib-applehelp==1.0.4
-      - sphinxcontrib-devhelp==1.0.2
-      - sphinxcontrib-htmlhelp==2.0.1
+      - sphinxcontrib-applehelp==1.0.8
+      - sphinxcontrib-devhelp==1.0.6
+      - sphinxcontrib-htmlhelp==2.0.5
       - sphinxcontrib-jsmath==1.0.1
-      - sphinxcontrib-qthelp==1.0.3
-      - sphinxcontrib-serializinghtml==1.1.5
-      - sqlalchemy==2.0.15
+      - sphinxcontrib-qthelp==1.0.7
+      - sphinxcontrib-serializinghtml==1.1.10
+      - sqlalchemy==2.0.29
       - squidpy==1.2.2
-      - stack-data==0.6.2
-      - starlette==0.22.0
-      - starsessions==1.3.0
-      - statsmodels==0.14.0
-      - stdlib-list==0.8.0
-      - superqt==0.4.1
+      - stack-data==0.6.3
+      - starlette==0.37.2
+      - starsessions==2.1.3
+      - statsmodels==0.14.1
+      - stdlib-list==0.10.0
+      - superqt==0.6.3
       - tabulate==0.9.0
       - tangram-sc==1.0.4
-      - tblib==1.7.0
-      - tensorstore==0.1.39
-      - terminado==0.17.1
-      - texttable==1.6.7
-      - threadpoolctl==3.1.0
-      - tifffile==2023.4.12
-      - timm==0.9.2
+      - tblib==3.0.0
+      - tensorstore==0.1.56
+      - terminado==0.18.1
+      - texttable==1.7.0
+      - threadpoolctl==3.4.0
+      - tifffile==2024.4.18
+      - timm==0.9.16
       - tinycss2==1.2.1
-      - tokenizers==0.13.3
+      - tokenizers==0.19.1
       - tomli==2.0.1
-      - toolz==0.12.0
+      - tomli-w==1.0.0
+      - toolz==0.12.1
       - torchinfo==1.8.0
-      - torchmetrics==0.11.4
+      - torchmetrics==1.3.2
       - torchstain==1.3.0
-      - tornado==6.3.2
-      - tqdm==4.65.0
-      - traitlets==5.9.0
-      - transformers==4.30.2
-      - typer==0.9.0
-      - tzdata==2023.3
-      - umap-learn==0.5.3
-      - uri-template==1.2.0
-      - uvicorn==0.22.0
-      - validators==0.20.0
-      - vispy==0.11.0
-      - wcwidth==0.2.6
+      - tornado==6.4
+      - tqdm==4.66.2
+      - traitlets==5.14.3
+      - transformers==4.40.0
+      - typeguard==4.2.1
+      - typer==0.12.3
+      - types-python-dateutil==2.9.0.20240316
+      - typing-extensions==4.11.0
+      - tzdata==2024.1
+      - umap-learn==0.5.6
+      - uri-template==1.3.0
+      - uvicorn==0.29.0
+      - validators==0.28.1
+      - vispy==0.14.2
+      - wcwidth==0.2.13
       - webcolors==1.13
       - webencodings==0.5.1
-      - websocket-client==1.5.2
-      - websockets==11.0.3
-      - wrapt==1.15.0
-      - xarray==2023.12.0
-      - xarray-dataclasses==1.7.0
-      - xarray-datatree==0.0.14
+      - websocket-client==1.7.0
+      - websockets==12.0
+      - wrapt==1.16.0
+      - xarray==2022.12.0
+      - xarray-dataclasses==1.5.0
+      - xarray-datatree==0.0.13
       - xarray-schema==0.0.3
       - xarray-spatial==0.3.7
+      - xmod==1.8.1
       - yarl==1.9.4
       - zarr==2.17.1
       - zict==3.0.0
       - zipp==3.18.1
+prefix: /scratch/project_mnt/S0010/Andrew_N/conda/hovernet
